--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:40.324876Z",
-     "start_time": "2020-06-03T02:57:40.322435Z"
+     "end_time": "2020-06-03T13:51:48.689748Z",
+     "start_time": "2020-06-03T13:51:48.687275Z"
     }
    },
    "outputs": [],
@@ -27,15 +27,16 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:40.785004Z",
-     "start_time": "2020-06-03T02:57:40.327674Z"
+     "end_time": "2020-06-03T13:51:49.043466Z",
+     "start_time": "2020-06-03T13:51:48.691790Z"
     }
    },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import glob, os"
+    "import glob, os\n",
+    "import textwrap"
    ]
   },
   {
@@ -50,8 +51,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:40.789134Z",
-     "start_time": "2020-06-03T02:57:40.786629Z"
+     "end_time": "2020-06-03T13:51:49.047950Z",
+     "start_time": "2020-06-03T13:51:49.045509Z"
     }
    },
    "outputs": [],
@@ -68,12 +69,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Determine Which Patients to Remove"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:41.804672Z",
-     "start_time": "2020-06-03T02:57:40.791069Z"
+     "end_time": "2020-06-03T13:51:49.952302Z",
+     "start_time": "2020-06-03T13:51:49.050066Z"
     },
     "scrolled": true
    },
@@ -112,7 +120,11 @@
     "patientOver18 = patient[patient['age'] > 18]\n",
     "print(str(patient[~(patient['age'] > 18)].shape[0]) + ' patients <=18 yo')\n",
     "print(str(patientOver18.shape[0]) + ' patientunitstayids with age > 18')\n",
-    "patientUnitStayIdOver18 = list(patientOver18['patientunitstayid'])"
+    "patientUnitStayIdOver18 = list(np.unique(patientOver18['patientunitstayid']))\n",
+    "\n",
+    "# Keep track of patients removing\n",
+    "ptunitstayidG18_remove = patient.loc[~(patient['age'] > 18)]['patientunitstayid']\n",
+    "ptunitstayidG18_remove = np.array(ptunitstayidG18_remove.unique())"
    ]
   },
   {
@@ -127,8 +139,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:41.809499Z",
-     "start_time": "2020-06-03T02:57:41.806665Z"
+     "end_time": "2020-06-03T13:51:49.956356Z",
+     "start_time": "2020-06-03T13:51:49.953608Z"
     }
    },
    "outputs": [],
@@ -137,7 +149,7 @@
     "sys.path.insert(0, '/Users/rachellehorwitz/Documents/VTAlert/src')\n",
     "if write_over_18 == 1:\n",
     "    from rewrite_patientsOver18 import *\n",
-    "    dir_write_to = '/Users/rachellehorwitz/Documents/tmp/' #dir_data_over18\n",
+    "    dir_write_to = dir_data_over18 #'/Users/rachellehorwitz/Documents/tmp/' #\n",
     "    keepPtsOver18(csvfiles, patientUnitStayIdOver18, dir_write_to, dir_data_raw)"
    ]
   },
@@ -153,35 +165,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:41.814529Z",
-     "start_time": "2020-06-03T02:57:41.810795Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([], dtype=float64)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a running array of patientunitstayid to remove (all over 18)\n",
-    "ptunitstayidG18_remove = np.array([])\n",
-    "ptunitstayidG18_remove"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:42.568360Z",
-     "start_time": "2020-06-03T02:57:41.815783Z"
+     "end_time": "2020-06-03T13:51:50.698334Z",
+     "start_time": "2020-06-03T13:51:49.957878Z"
     }
    },
    "outputs": [
@@ -191,7 +176,7 @@
      "text": [
       "['Expired' 'Alive' nan]\n",
       "34 patientunitstayids with nan unitdischargestatus\n",
-      "ptunitstayidG18_remove currently has 34 u patientunitstayids\n"
+      "ptunitstayidG18_remove currently has 1096 u patientunitstayids\n"
      ]
     }
    ],
@@ -210,11 +195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:42.572776Z",
-     "start_time": "2020-06-03T02:57:42.569768Z"
+     "end_time": "2020-06-03T13:51:50.705139Z",
+     "start_time": "2020-06-03T13:51:50.701219Z"
     }
    },
    "outputs": [
@@ -224,7 +209,7 @@
        "numpy.int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,11 +220,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:42.650506Z",
-     "start_time": "2020-06-03T02:57:42.575594Z"
+     "end_time": "2020-06-03T13:51:50.783271Z",
+     "start_time": "2020-06-03T13:51:50.707312Z"
     },
     "scrolled": true
    },
@@ -249,10 +234,10 @@
      "output_type": "stream",
      "text": [
       "5826 patientunitstayids died within 48 hours of admission to ICU\n",
-      "ptunitstayidG18_remove currently has 5860 u patientunitstayids\n",
-      "5860 patientunitstayids will be removed because of NaN dischargestatus or early death\n",
-      " or died within 48 hours of ICU admission\n",
-      "193842 patientunitstayids remaining\n"
+      "ptunitstayidG18_remove currently has 1096 u patientunitstayids\n",
+      "5826 patientunitstayids will be removed because of NaN dischargestatus or died within 48 hours of ICU admission\n",
+      "6922 total patients SO FAR have been removed\n",
+      "193842 patients remaining\n"
      ]
     }
    ],
@@ -264,13 +249,18 @@
     "print(str(patient_diedTooSoon.shape[0]) + ' patientunitstayids died within ' \\\n",
     "      +  str(deathThreshHrs) + ' hours of admission to ICU')\n",
     "patient_diedTooSoon = patient_diedTooSoon['patientunitstayid'].unique()\n",
-    "ptunitstayidG18_remove = np.union1d(ptunitstayidG18_remove, patient_diedTooSoon)\n",
     "print('ptunitstayidG18_remove currently has ' + str(np.unique(ptunitstayidG18_remove).shape[0]) + ' u patientunitstayids')\n",
-    "print(str(ptunitstayidG18_remove.shape[0]) \n",
-    "      + ' patientunitstayids will be removed because of NaN dischargestatus or early death\\n' \\\n",
-    "                 ' or died within ' + str(deathThreshHrs) + ' hours of ICU admission')\n",
+    "print(str(patient_diedTooSoon.shape[0]) \\\n",
+    "      + ' patientunitstayids will be removed because of NaN dischargestatus' \\\n",
+    "                + ' or died within ' + str(deathThreshHrs) + ' hours of ICU admission')\n",
+    "\n",
+    "# Add patients who died to soon or have NaN discharge status to list of patients to remove\n",
+    "ptunitstayidG18_remove = np.union1d(ptunitstayidG18_remove, patient_diedTooSoon)\n",
+    "# patient = patient[~patient['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
+    "# print(str(patient.shape[0]) + ' patientunitstayids remaining')\n",
     "patient = patient[~patient['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
-    "print(str(patient.shape[0]) + ' patientunitstayids remaining')"
+    "print(str(ptunitstayidG18_remove.shape[0]) + ' total patients SO FAR have been removed') \n",
+    "print(str(patient['patientunitstayid'].unique().shape[0]) + ' patientunitstayids remaining')"
    ]
   },
   {
@@ -282,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:43.263358Z",
-     "start_time": "2020-06-03T02:57:42.653691Z"
+     "end_time": "2020-06-03T13:51:51.384406Z",
+     "start_time": "2020-06-03T13:51:50.784882Z"
     }
    },
    "outputs": [
@@ -306,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:43.278447Z",
-     "start_time": "2020-06-03T02:57:43.264843Z"
+     "end_time": "2020-06-03T13:51:51.399564Z",
+     "start_time": "2020-06-03T13:51:51.385706Z"
     },
     "scrolled": true
    },
@@ -749,7 +739,7 @@
        "29                                             Respiratory  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,11 +762,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:43.643004Z",
-     "start_time": "2020-06-03T02:57:43.279822Z"
+     "end_time": "2020-06-03T13:51:51.767198Z",
+     "start_time": "2020-06-03T13:51:51.400895Z"
     },
     "scrolled": true
    },
@@ -789,7 +779,9 @@
       "171716 unique patientunitstayids in admissionsdx\n",
       "171716 unique patientunitstayids who meet previous critera and have admissionsdx\n",
       "22126 u patientunitstayids that dont have admissiondx\n",
-      "27986 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n"
+      "29048 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
+      "171716 u patientunitidstays remaining in admissiondx\n",
+      "171716 u patientunitidstays remaining in patient\n"
      ]
     }
    ],
@@ -819,7 +811,9 @@
     "\n",
     "# Remove patientunitstayids\n",
     "patient = patient[~patient['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
-    "admissiondx = admissiondx[~admissiondx['patientunitstayid'].isin(ptunitstayidG18_remove)]"
+    "admissiondx = admissiondx[~admissiondx['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
+    "print(str(admissiondx['patientunitstayid'].unique().shape[0]) + ' u patientunitidstays remaining in admissiondx')\n",
+    "print(str(patient['patientunitstayid'].unique().shape[0]) + ' u patientunitidstays remaining in patient')"
    ]
   },
   {
@@ -838,22 +832,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:44.012323Z",
-     "start_time": "2020-06-03T02:57:43.644622Z"
+     "end_time": "2020-06-03T09:57:23.684675Z",
+     "start_time": "2020-06-03T09:57:23.329326Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "485 patientunitstayids were diagnosed with \"Thrombosis, vascular\" upon admission\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Eliminate patientunitstayids who were diagnosed with DVT upon admission to ICU\n",
     "dvt_admissiondx = admissiondx[admissiondx['admitdxname'].str.contains('Thrombosis, vascular', case=False)]\n",
@@ -884,11 +870,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:44.027518Z",
-     "start_time": "2020-06-03T02:57:44.013642Z"
+     "end_time": "2020-06-03T09:57:23.699511Z",
+     "start_time": "2020-06-03T09:57:23.686126Z"
     }
    },
    "outputs": [],
@@ -899,11 +885,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:44.083158Z",
-     "start_time": "2020-06-03T02:57:44.029182Z"
+     "end_time": "2020-06-03T09:57:23.754814Z",
+     "start_time": "2020-06-03T09:57:23.701243Z"
     }
    },
    "outputs": [],
@@ -915,11 +901,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:45.272629Z",
-     "start_time": "2020-06-03T02:57:44.084424Z"
+     "end_time": "2020-06-03T09:57:24.897246Z",
+     "start_time": "2020-06-03T09:57:23.756387Z"
     }
    },
    "outputs": [],
@@ -934,11 +920,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:45.929888Z",
-     "start_time": "2020-06-03T02:57:45.274036Z"
+     "end_time": "2020-06-03T09:57:25.538046Z",
+     "start_time": "2020-06-03T09:57:24.898796Z"
     }
    },
    "outputs": [],
@@ -956,24 +942,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-03T02:57:47.334204Z",
-     "start_time": "2020-06-03T02:57:45.931460Z"
+     "end_time": "2020-06-03T09:57:26.891698Z",
+     "start_time": "2020-06-03T09:57:25.539435Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1645 u patientunitstayids with PE that will be removed\n",
-      "169586 u patientunitstayids remaining in \"patient\"\n",
-      "169586 u patientunitstayids remaining in \"admissiondx\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get patientunitidstays with PE\n",
     "admissiondx_no_pe = admissiondx[~admissiondx['admitdxpath'].str.contains('Embolus, pulmonary', case=False)]\n",
@@ -990,6 +966,149 @@
     "patient = patient[~patient['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
     "print(str(patient['patientunitstayid'].unique().shape[0]) + ' u patientunitstayids remaining in \"patient\"')\n",
     "print(str(admissiondx['patientunitstayid'].unique().shape[0]) + ' u patientunitstayids remaining in \"admissiondx\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Eliminate Patients Diagnosed with VTE Within 48 Hours of ICU Admittance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T09:57:29.046087Z",
+     "start_time": "2020-06-03T09:57:26.893172Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "diagnosis = pd.read_csv(dir_data_over18 + 'diagnosis.csv')\n",
+    "\n",
+    "# Remove patientunitstayids from diagnosis that we already know we're removing\n",
+    "diagnosis = diagnosis[~diagnosis['patientunitstayid'].isin(ptunitstayidG18_remove)]\n",
+    "print('After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",' \\\n",
+    "     + str(diagnosis['patientunitstayid'].unique().shape[0]) + ' u patientunitstayids \\n and ' \\\n",
+    "      + str(diagnosis.shape[0]) + ' rows are left in diagnosis.csv')\n",
+    "diagnosis.head()\n",
+    "\n",
+    "# Define time threshold\n",
+    "time_thresh = 48*60\n",
+    "\n",
+    "# Import ICD9 codes for VTE\n",
+    "from icd9codes import *\n",
+    "icd9_vte = getVTEicd9codes()\n",
+    "print(icd9_vte)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T09:57:31.349072Z",
+     "start_time": "2020-06-03T09:57:29.047543Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Add ICD9 codes for diseases that clearly have them\n",
+    "# diabetes melitus --> 250.xx\n",
+    "diagnosis.loc[(diagnosis.diagnosisstring.str.contains('diabetes')) & \\\n",
+    "              (pd.isnull(diagnosis.icd9code)), 'icd9code']= '250.xx'\n",
+    "\n",
+    "# cardiomyopathy --> 425.xx\n",
+    "diagnosis.loc[(diagnosis.diagnosisstring.str.contains('cardiomyopathy')) & \\\n",
+    "              (pd.isnull(diagnosis.icd9code)), 'icd9code']= '425.xx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T09:57:36.807498Z",
+     "start_time": "2020-06-03T09:57:31.350543Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# NON-NULL ICD9 CODES: find those diagnoses with VTE within 48 hours of ICU admission and remove them\n",
+    "diagnosis_hasicd9 = diagnosis[~diagnosis['icd9code'].isnull()]\n",
+    "diagnosis_hasicd9_vte = pd.DataFrame()\n",
+    "for code in icd9_vte:\n",
+    "    print(str(code))\n",
+    "    rows = diagnosis_hasicd9[diagnosis_hasicd9['icd9code'].str.contains(code)]\n",
+    "    diagnosis_hasicd9_vte = pd.concat([rows, diagnosis_hasicd9_vte])\n",
+    "    diagnosis_hasicd9_vte = diagnosis_hasicd9_vte.loc[~diagnosis_hasicd9_vte.index.duplicated(keep='first')]\n",
+    "u_ptunitstayid_diagnosis_hasicd9_vte = diagnosis_hasicd9_vte['patientunitstayid'].unique()\n",
+    "print(str(u_ptunitstayid_diagnosis_hasicd9_vte.shape[0]) + ' unique patientunitstayids with ICD9 and VTE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T09:57:36.817098Z",
+     "start_time": "2020-06-03T09:57:36.809958Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# diagnosis_hasicd9_pos = diagnosis_hasicd9_vte[diagnosis_hasicd9_vte['diagnosisoffset'] > time_thresh]\n",
+    "# print(str(diagnosis_hasicd9_pos['patientunitstayid'].unique().shape[0]) + ' unique patientunitstayids that' \\\n",
+    "#      + ' meet inclusion/exclusion criteria for age, discharge, admitdx AND have ICD9 AND \\n' \\\n",
+    "#       + ' VTE diagnosed AFTER ' + str(time_thresh) + ' min of ICU admit')\n",
+    "\n",
+    "remove_diagnosis_hasicd9_vte = diagnosis_hasicd9_vte[diagnosis_hasicd9_vte['diagnosisoffset'] <= time_thresh]\n",
+    "print(str(remove_diagnosis_hasicd9_vte['patientunitstayid'].unique().shape[0]) + ' diagnosed with VTE at time < ' + str(time_thresh))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T03:54:08.555931Z",
+     "start_time": "2020-06-03T03:54:08.552647Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "1059-919"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T03:21:45.303475Z",
+     "start_time": "2020-06-03T03:21:45.172711Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "diagnosis_nullicd9 = diagnosis[diagnosis['icd9code'].isnull()]\n",
+    "print(str(diagnosis_nullicd9['patientunitstayid'].unique().shape[0]) + ' NULL ICD9 u patientunitstayids in diagnosis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-03T03:07:49.223625Z",
+     "start_time": "2020-06-03T03:07:49.220144Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "diagnosis.shape[0]"
    ]
   },
   {
@@ -1631,9 +1750,9 @@
    },
    "position": {
     "height": "768px",
-    "left": "427px",
+    "left": "622px",
     "right": "20px",
-    "top": "252px",
+    "top": "327px",
     "width": "763px"
    },
    "types_to_exclude": [
