added index=False when writing .csv files in loadRawData_eICU.ipynb

--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:34.494761Z",
-     "start_time": "2020-06-04T18:26:34.491638Z"
+     "end_time": "2020-06-04T18:48:12.280677Z",
+     "start_time": "2020-06-04T18:48:12.277663Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
     "    # Known discharge status\n",
     "    # NOT admitted with VTE\n",
     "    \n",
-    "do_eda_admitdx = 1\n",
+    "do_eda_admitdx = 0\n",
     "time_thresh = 24*60"
    ]
   },
@@ -35,8 +35,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:35.055546Z",
-     "start_time": "2020-06-04T18:26:34.497645Z"
+     "end_time": "2020-06-04T18:48:12.760323Z",
+     "start_time": "2020-06-04T18:48:12.282921Z"
     }
    },
    "outputs": [],
@@ -59,8 +59,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:35.060190Z",
-     "start_time": "2020-06-04T18:26:35.057511Z"
+     "end_time": "2020-06-04T18:48:12.765519Z",
+     "start_time": "2020-06-04T18:48:12.762783Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:35.860051Z",
-     "start_time": "2020-06-04T18:26:35.062186Z"
+     "end_time": "2020-06-04T18:48:13.623330Z",
+     "start_time": "2020-06-04T18:48:12.768099Z"
     }
    },
    "outputs": [
@@ -139,8 +139,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:36.032446Z",
-     "start_time": "2020-06-04T18:26:35.861682Z"
+     "end_time": "2020-06-04T18:48:13.796455Z",
+     "start_time": "2020-06-04T18:48:13.624873Z"
     },
     "scrolled": true
    },
@@ -193,8 +193,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:37.749425Z",
-     "start_time": "2020-06-04T18:26:36.036762Z"
+     "end_time": "2020-06-04T18:48:15.400458Z",
+     "start_time": "2020-06-04T18:48:13.798169Z"
     }
    },
    "outputs": [
@@ -260,8 +260,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:38.489506Z",
-     "start_time": "2020-06-04T18:26:37.753904Z"
+     "end_time": "2020-06-04T18:48:16.167681Z",
+     "start_time": "2020-06-04T18:48:15.402244Z"
     }
    },
    "outputs": [
@@ -293,8 +293,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:38.570340Z",
-     "start_time": "2020-06-04T18:26:38.491162Z"
+     "end_time": "2020-06-04T18:48:16.255224Z",
+     "start_time": "2020-06-04T18:48:16.169363Z"
     },
     "scrolled": true
    },
@@ -352,8 +352,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:39.233699Z",
-     "start_time": "2020-06-04T18:26:38.572404Z"
+     "end_time": "2020-06-04T18:48:16.932937Z",
+     "start_time": "2020-06-04T18:48:16.257291Z"
     }
    },
    "outputs": [
@@ -376,8 +376,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:39.250737Z",
-     "start_time": "2020-06-04T18:26:39.235300Z"
+     "end_time": "2020-06-04T18:48:16.952596Z",
+     "start_time": "2020-06-04T18:48:16.934865Z"
     },
     "scrolled": true
    },
@@ -842,8 +842,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:39.632661Z",
-     "start_time": "2020-06-04T18:26:39.252346Z"
+     "end_time": "2020-06-04T18:48:17.368785Z",
+     "start_time": "2020-06-04T18:48:16.954414Z"
     },
     "scrolled": true
    },
@@ -912,8 +912,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:40.013832Z",
-     "start_time": "2020-06-04T18:26:39.634637Z"
+     "end_time": "2020-06-04T18:48:17.752800Z",
+     "start_time": "2020-06-04T18:48:17.375054Z"
     }
    },
    "outputs": [
@@ -958,8 +958,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:40.031424Z",
-     "start_time": "2020-06-04T18:26:40.015723Z"
+     "end_time": "2020-06-04T18:48:17.760281Z",
+     "start_time": "2020-06-04T18:48:17.757837Z"
     }
    },
    "outputs": [],
@@ -973,8 +973,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:40.087607Z",
-     "start_time": "2020-06-04T18:26:40.033350Z"
+     "end_time": "2020-06-04T18:48:17.764393Z",
+     "start_time": "2020-06-04T18:48:17.761865Z"
     }
    },
    "outputs": [],
@@ -989,8 +989,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:41.235462Z",
-     "start_time": "2020-06-04T18:26:40.089045Z"
+     "end_time": "2020-06-04T18:48:17.770076Z",
+     "start_time": "2020-06-04T18:48:17.766231Z"
     }
    },
    "outputs": [],
@@ -1008,8 +1008,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:41.914835Z",
-     "start_time": "2020-06-04T18:26:41.236843Z"
+     "end_time": "2020-06-04T18:48:17.774401Z",
+     "start_time": "2020-06-04T18:48:17.771857Z"
     }
    },
    "outputs": [],
@@ -1030,8 +1030,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:43.302824Z",
-     "start_time": "2020-06-04T18:26:41.916495Z"
+     "end_time": "2020-06-04T18:48:19.179182Z",
+     "start_time": "2020-06-04T18:48:17.776029Z"
     }
    },
    "outputs": [
@@ -1075,8 +1075,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:26:45.523180Z",
-     "start_time": "2020-06-04T18:26:43.304623Z"
+     "end_time": "2020-06-04T18:48:21.279933Z",
+     "start_time": "2020-06-04T18:48:19.180717Z"
     }
    },
    "outputs": [
@@ -1116,11 +1116,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:27:30.342316Z",
-     "start_time": "2020-06-04T18:27:07.478771Z"
+     "end_time": "2020-06-04T18:48:43.841593Z",
+     "start_time": "2020-06-04T18:48:21.281602Z"
     },
     "scrolled": true
    },
@@ -1202,21 +1202,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:27:46.308927Z",
-     "start_time": "2020-06-04T18:27:34.057338Z"
+     "end_time": "2020-06-04T18:48:54.964829Z",
+     "start_time": "2020-06-04T18:48:43.843301Z"
     }
    },
    "outputs": [],
    "source": [
     "if write_filtered02 == 1:\n",
     "    dir_write_filtered = '/Users/rachellehorwitz/Documents/VTAlert/data/filtered02/'\n",
-    "    ptunitstayid_vte_series.to_csv(dir_write_filtered + 'pos_ptunitstayid.csv')\n",
-    "    patient.to_csv(dir_write_filtered + 'patient.csv')\n",
-    "    diagnosis.to_csv(dir_write_filtered + 'diagnosis.csv')\n",
-    "    admissiondx.to_csv(dir_write_filtered + 'admissiondx.csv')"
+    "    ptunitstayid_vte_series.to_csv(dir_write_filtered + 'pos_ptunitstayid.csv', index=False)\n",
+    "    patient.to_csv(dir_write_filtered + 'patient.csv', index=False)\n",
+    "    diagnosis.to_csv(dir_write_filtered + 'diagnosis.csv', index=False)\n",
+    "    admissiondx.to_csv(dir_write_filtered + 'admissiondx.csv', index=False)"
    ]
   },
   {
