state after Week 2 demo

--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:12.280677Z",
-     "start_time": "2020-06-04T18:48:12.277663Z"
+     "end_time": "2020-06-05T03:29:47.485327Z",
+     "start_time": "2020-06-05T03:29:47.482211Z"
     }
    },
    "outputs": [],
    "source": [
     "write_over_18 = 0 # set to 1 if you want to write files for patients over 18\n",
-    "write_filtered02 = 1 # set to 1 if you want to write files for patients who meet the following criteria:\n",
+    "write_filtered02 = 0 # set to 1 if you want to write files for patients who meet the following criteria:\n",
     "    # have age and admissionweight\n",
     "    # over 18\n",
     "    # Alive after 24 hours of ICU admission\n",
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:12.760323Z",
-     "start_time": "2020-06-04T18:48:12.282921Z"
+     "end_time": "2020-06-05T03:29:50.572267Z",
+     "start_time": "2020-06-05T03:29:49.925974Z"
     }
    },
    "outputs": [],
@@ -56,11 +56,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:12.765519Z",
-     "start_time": "2020-06-04T18:48:12.762783Z"
+     "end_time": "2020-06-05T03:29:54.643632Z",
+     "start_time": "2020-06-05T03:29:54.640589Z"
     }
    },
    "outputs": [],
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:13.623330Z",
-     "start_time": "2020-06-04T18:48:12.768099Z"
+     "end_time": "2020-06-05T03:29:58.206143Z",
+     "start_time": "2020-06-05T03:29:57.441065Z"
     }
    },
    "outputs": [
@@ -1221,27 +1221,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T16:57:25.727040Z",
-     "start_time": "2020-06-04T16:57:25.723068Z"
+     "end_time": "2020-06-05T03:35:47.483703Z",
+     "start_time": "2020-06-05T03:35:47.473426Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "184117"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "patient['patientunitstayid'].unique().shape[0]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:24:50.345876Z",
-     "start_time": "2020-06-04T18:24:50.343401Z"
+     "end_time": "2020-06-05T03:40:45.881667Z",
+     "start_time": "2020-06-05T03:40:45.877787Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "182130"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "184117 - 1987"
+   ]
   },
   {
    "cell_type": "markdown",
