--- a/models/EDA.ipynb
+++ b/models/EDA.ipynb
@@ -11,7 +11,7 @@
    },
    "outputs": [],
    "source": [
-    "dir_read = '/Users/rachellehorwitz/Documents/VTAlert/data/filtered01/'"
+    "dir_read = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered01/'"
    ]
   },
   {
@@ -1529,9 +1529,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:insight] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-insight-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1543,7 +1543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
