--- a/models/Model.ipynb
+++ b/models/Model.ipynb
@@ -29,7 +29,7 @@
     "streamlit_status = 0 \n",
     "do_plots = 1\n",
     "\n",
-    "dir_read = '/Users/rachellehorwitz/Documents/VTAlert/data/filtered02/'\n",
+    "dir_read = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered02/'\n",
     "#dir_read = '/Users/rachellehorwitz/Documents/VTAlert/over18_eicu/'\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -4639,9 +4639,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:insight] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-insight-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4653,7 +4653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
