fixed minor mistake: now, patients are removed if they die within 24 hours of ICU admission, not 48

--- a/notebooks/loadRawData_eICU.ipynb
+++ b/notebooks/loadRawData_eICU.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:29:47.485327Z",
-     "start_time": "2020-06-05T03:29:47.482211Z"
+     "end_time": "2020-06-06T23:05:05.242162Z",
+     "start_time": "2020-06-06T23:05:05.238759Z"
     }
    },
    "outputs": [],
@@ -22,21 +22,26 @@
     "write_filtered02 = 0 # set to 1 if you want to write files for patients who meet the following criteria:\n",
     "    # have age and admissionweight\n",
     "    # over 18\n",
+    "    # Alive after 48 hours of ICU admission\n",
+    "    # Known discharge status\n",
+    "    # NOT admitted with VTE\n",
+    "write_filtered03 = 1 # set to 1 if you want to write files for the patients who meet the following criteria:\n",
+    "    # have age and admissionweight\n",
+    "    # over 18\n",
     "    # Alive after 24 hours of ICU admission\n",
     "    # Known discharge status\n",
     "    # NOT admitted with VTE\n",
-    "    \n",
     "do_eda_admitdx = 0\n",
     "time_thresh = 24*60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:29:50.572267Z",
-     "start_time": "2020-06-05T03:29:49.925974Z"
+     "end_time": "2020-06-06T23:05:05.801844Z",
+     "start_time": "2020-06-06T23:05:05.245010Z"
     }
    },
    "outputs": [],
@@ -56,11 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:29:54.643632Z",
-     "start_time": "2020-06-05T03:29:54.640589Z"
+     "end_time": "2020-06-06T23:05:05.806186Z",
+     "start_time": "2020-06-06T23:05:05.803532Z"
     }
    },
    "outputs": [],
@@ -86,11 +91,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:29:58.206143Z",
-     "start_time": "2020-06-05T03:29:57.441065Z"
+     "end_time": "2020-06-06T23:05:06.557833Z",
+     "start_time": "2020-06-06T23:05:05.808129Z"
     }
    },
    "outputs": [
@@ -139,8 +144,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:13.796455Z",
-     "start_time": "2020-06-04T18:48:13.624873Z"
+     "end_time": "2020-06-06T23:05:06.727963Z",
+     "start_time": "2020-06-06T23:05:06.559565Z"
     },
     "scrolled": true
    },
@@ -193,8 +198,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:15.400458Z",
-     "start_time": "2020-06-04T18:48:13.798169Z"
+     "end_time": "2020-06-06T23:05:08.361066Z",
+     "start_time": "2020-06-06T23:05:06.731935Z"
     }
    },
    "outputs": [
@@ -260,9 +265,10 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:16.167681Z",
-     "start_time": "2020-06-04T18:48:15.402244Z"
-    }
+     "end_time": "2020-06-06T23:05:09.100585Z",
+     "start_time": "2020-06-06T23:05:08.364304Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -293,8 +299,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:16.255224Z",
-     "start_time": "2020-06-04T18:48:16.169363Z"
+     "end_time": "2020-06-06T23:05:09.175172Z",
+     "start_time": "2020-06-06T23:05:09.102101Z"
     },
     "scrolled": true
    },
@@ -303,17 +309,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5053 patientunitstayids died within 48 hours of admission to ICU\n",
+      "3278 patientunitstayids died within 24 hours of admission to ICU\n",
       "ptunitstayidG18_remove currently has 17739 u patientunitstayids\n",
-      "5053 patientunitstayids will be removed because of NaN dischargestatus or died within 48 hours of ICU admission\n",
-      "22792 total patients SO FAR have been removed\n",
-      "178067 patientunitstayids remaining\n"
+      "3278 patientunitstayids will be removed because of NaN dischargestatus or died within 24 hours of ICU admission\n",
+      "21017 total patients SO FAR have been removed\n",
+      "179842 patientunitstayids remaining\n"
      ]
     }
    ],
    "source": [
     "# Eliminate patientunitstayids for patients who died within 48 hours of admittance to ICU\n",
-    "deathThreshHrs = 48\n",
+    "deathThreshHrs = 24\n",
     "patient_diedTooSoon = patient[(patient['unitdischargestatus']=='Expired') \\\n",
     "                     & (patient['unitdischargeoffset'] < deathThreshHrs*60)]\n",
     "print(str(patient_diedTooSoon.shape[0]) + ' patientunitstayids died within ' \\\n",
@@ -352,8 +358,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:16.932937Z",
-     "start_time": "2020-06-04T18:48:16.257291Z"
+     "end_time": "2020-06-06T23:05:09.787527Z",
+     "start_time": "2020-06-06T23:05:09.177247Z"
     }
    },
    "outputs": [
@@ -376,8 +382,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:16.952596Z",
-     "start_time": "2020-06-04T18:48:16.934865Z"
+     "end_time": "2020-06-06T23:05:09.805012Z",
+     "start_time": "2020-06-06T23:05:09.789246Z"
     },
     "scrolled": true
    },
@@ -842,8 +848,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.368785Z",
-     "start_time": "2020-06-04T18:48:16.954414Z"
+     "end_time": "2020-06-06T23:05:10.182410Z",
+     "start_time": "2020-06-06T23:05:09.806734Z"
     },
     "scrolled": true
    },
@@ -852,13 +858,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "586279 admissiondx entries for patients >18, and with ok discharge\n",
-      "166226 unique patientunitstayids in admissionsdx\n",
-      "166226 unique patientunitstayids who meet previous critera and have admissionsdx\n",
-      "11841 u patientunitstayids that dont have admissiondx\n",
-      "34633 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
-      "166226 u patientunitidstays remaining in admissiondx\n",
-      "166226 u patientunitidstays remaining in patient\n"
+      "592405 admissiondx entries for patients >18, and with ok discharge\n",
+      "167985 unique patientunitstayids in admissionsdx\n",
+      "167985 unique patientunitstayids who meet previous critera and have admissionsdx\n",
+      "11857 u patientunitstayids that dont have admissiondx\n",
+      "32874 u patientstayids who have unknown discharge status, died too early, and/or do not have admissiondx\n",
+      "167985 u patientunitidstays remaining in admissiondx\n",
+      "167985 u patientunitidstays remaining in patient\n"
      ]
     }
    ],
@@ -912,8 +918,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.752800Z",
-     "start_time": "2020-06-04T18:48:17.375054Z"
+     "end_time": "2020-06-06T23:05:10.556982Z",
+     "start_time": "2020-06-06T23:05:10.184371Z"
     }
    },
    "outputs": [
@@ -921,7 +927,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "473 patientunitstayids were diagnosed with \"Thrombosis, vascular\" upon admission\n"
+      "474 patientunitstayids were diagnosed with \"Thrombosis, vascular\" upon admission\n"
      ]
     }
    ],
@@ -958,8 +964,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.760281Z",
-     "start_time": "2020-06-04T18:48:17.757837Z"
+     "end_time": "2020-06-06T23:05:10.561032Z",
+     "start_time": "2020-06-06T23:05:10.558735Z"
     }
    },
    "outputs": [],
@@ -973,8 +979,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.764393Z",
-     "start_time": "2020-06-04T18:48:17.761865Z"
+     "end_time": "2020-06-06T23:05:10.565156Z",
+     "start_time": "2020-06-06T23:05:10.562748Z"
     }
    },
    "outputs": [],
@@ -989,8 +995,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.770076Z",
-     "start_time": "2020-06-04T18:48:17.766231Z"
+     "end_time": "2020-06-06T23:05:10.570225Z",
+     "start_time": "2020-06-06T23:05:10.566646Z"
     }
    },
    "outputs": [],
@@ -1008,8 +1014,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:17.774401Z",
-     "start_time": "2020-06-04T18:48:17.771857Z"
+     "end_time": "2020-06-06T23:05:10.573824Z",
+     "start_time": "2020-06-06T23:05:10.571580Z"
     }
    },
    "outputs": [],
@@ -1030,8 +1036,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:19.179182Z",
-     "start_time": "2020-06-04T18:48:17.776029Z"
+     "end_time": "2020-06-06T23:05:11.946531Z",
+     "start_time": "2020-06-06T23:05:10.575047Z"
     }
    },
    "outputs": [
@@ -1039,9 +1045,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1601 u patientunitstayids with PE at admission that will be removed\n",
-      "164152 u patientunitstayids remaining in \"patient\"\n",
-      "164152 u patientunitstayids remaining in \"admissiondx\"\n"
+      "1612 u patientunitstayids with PE at admission that will be removed\n",
+      "165899 u patientunitstayids remaining in \"patient\"\n",
+      "165899 u patientunitstayids remaining in \"admissiondx\"\n"
      ]
     }
    ],
@@ -1075,8 +1081,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:21.279933Z",
-     "start_time": "2020-06-04T18:48:19.180717Z"
+     "end_time": "2020-06-06T23:05:14.176056Z",
+     "start_time": "2020-06-06T23:05:11.948131Z"
     }
    },
    "outputs": [
@@ -1084,8 +1090,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",157850 u patientunitstayids \n",
-      " and 2546976 rows are left in diagnosis.csv\n",
+      "After removing patientunitstayids that were removed from \"patient.csv\" and \"admitdx.csv\",159567 u patientunitstayids \n",
+      " and 2576098 rows are left in diagnosis.csv\n",
       "['415.1', '415.10', '415.11', '415.13', '415.19', '451.0', '451.1', '451.10', '451.11', '451.19', '451.2', '451.20', '451.81', '451.89', '451.9', '451.90', '453.1', '453.10', '453.2', '453.20', '453.4', '453.40', '453.41', '453.42', '453.6', '453.60', '453.8', '453.80', '453.89', '453.9', '453.90']\n"
      ]
     }
@@ -1119,8 +1125,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:43.841593Z",
-     "start_time": "2020-06-04T18:48:21.281602Z"
+     "end_time": "2020-06-06T23:05:37.197393Z",
+     "start_time": "2020-06-06T23:05:14.177662Z"
     },
     "scrolled": true
    },
@@ -1160,9 +1166,9 @@
       "453.89\n",
       "453.9\n",
       "453.90\n",
-      "1517 unique patientunitstayids with ICD9 and VTE\n",
-      "615 unique patientunitstayids with NULL icd9 AND DVT\n",
-      "1987 u patientunitidstays with VTE diagnosed ever\n"
+      "1549 unique patientunitstayids with ICD9 and VTE\n",
+      "626 unique patientunitstayids with NULL icd9 AND DVT\n",
+      "2028 u patientunitidstays with VTE diagnosed ever\n"
      ]
     }
    ],
@@ -1205,14 +1211,14 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T18:48:54.964829Z",
-     "start_time": "2020-06-04T18:48:43.843301Z"
+     "end_time": "2020-06-06T23:05:48.384194Z",
+     "start_time": "2020-06-06T23:05:37.199101Z"
     }
    },
    "outputs": [],
    "source": [
-    "if write_filtered02 == 1:\n",
-    "    dir_write_filtered = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered02/'\n",
+    "if write_filtered03 == 1:\n",
+    "    dir_write_filtered = '/Users/rachellehorwitz/Documents/ViTalErt/data/filtered03/'\n",
     "    ptunitstayid_vte_series.to_csv(dir_write_filtered + 'pos_ptunitstayid.csv', index=False)\n",
     "    patient.to_csv(dir_write_filtered + 'patient.csv', index=False)\n",
     "    diagnosis.to_csv(dir_write_filtered + 'diagnosis.csv', index=False)\n",
@@ -1221,21 +1227,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:35:47.483703Z",
-     "start_time": "2020-06-05T03:35:47.473426Z"
+     "end_time": "2020-06-06T23:05:48.395431Z",
+     "start_time": "2020-06-06T23:05:48.385532Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "184117"
+       "165899"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,11 +1252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-05T03:40:45.881667Z",
-     "start_time": "2020-06-05T03:40:45.877787Z"
+     "end_time": "2020-06-06T23:05:48.401157Z",
+     "start_time": "2020-06-06T23:05:48.397607Z"
     }
    },
    "outputs": [
@@ -1260,13 +1266,13 @@
        "182130"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "184117 - 1987"
+    "(184117 - 1987)"
    ]
   },
   {
